--- a/src/component/registration.css
+++ b/src/component/registration.css
@@ -29,8 +29,8 @@ body {
     padding: 1.2rem 1.5rem;
     border-radius: 1px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    width: 500px;
-    height: 520px;
+    width: 100%;
+    height: 100%;
     text-align: center;
 }
 
