--- a/src/components/Loginpage/index.css
+++ b/src/components/Loginpage/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url('../imgs/MainBGImg.jpg') no-repeat center center;
+    background: url('../../imgs/MainBGImg.jpg') no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -16,21 +16,22 @@ body {
     margin: 0px;
 }
 
-.signin-container{
+.login-container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
 }
 
-.signin-form {
+.login-form {
+    padding: 30px;
     background: rgba(255, 255, 255, 0.7);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    padding: 1.2rem 1.5rem;
+    padding: 1.5rem 2rem;
     border-radius: 1px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    height: 100%;
+    width: 500px;
+    height: 300px;
     text-align: center;
 }
 
@@ -40,26 +41,20 @@ body {
     color: #222;
     font-weight: bold;
 }
-.name-container, .phone-email-container, .dob-gender-container {
-    display: flex;
-    justify-content: space-between;
-}
-.name{
-    width: 48%;
-}
-.signin-label {
+
+.login-label {
     display: block;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 700;
     text-align: center;
-    margin: 3px 2px;
+    margin: 5px 0 2px;
     color: #333;
 
 }
 
-.signin-input {
+.login-input {
     width: 100%;
-    padding: 5px;
+    padding: 8px;
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 6px;
@@ -68,7 +63,7 @@ body {
     background: #f9f9f9;
 }
 
-.signin-input:focus {
+.login-input:focus {
     border-color: #198754;
     outline: none;
     background: white;
@@ -77,11 +72,13 @@ body {
 .error-message {
     color: red;
     font-size: 10px;
+    margin-top: 5px;
+    display: block;
     text-align: left;
-    height: 4px;
+    height: 10px;
 }
 
-.signin-button {
+.login-button {
     width: 100%;
     padding: 8px;
     background: #198754;
@@ -95,25 +92,26 @@ body {
     font-weight: bold;
 }
 
-.signin-button:hover {
+.login-button:hover {
     background: #01763f;
 }
 
 .extra-links {
     display: flex;
-    justify-content: end;
-    margin-top: 13px;
+    justify-content: space-between;
+    margin-top: 10px;
 }
 
 .link-button {
     background: none;
     border: none;
     color: #198754;
-    font-size: 13px;
+    font-size: 14px;
     cursor: pointer;
     text-decoration: underline;
     transition: color 0.3s ease-in-out;
     font-weight: bold;
+    margin-right: 10px;
 }
 
 .link-button:hover {
