--- a/src/components/Registration/index.css
+++ b/src/components/Registration/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url('../imgs/MainBGImg.jpg') no-repeat center center;
+    background: url('../../imgs/MainBGImg.jpg') no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -16,22 +16,21 @@ body {
     margin: 0px;
 }
 
-.login-container {
+.signin-container{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
 }
 
-.login-form {
-    padding: 30px;
+.signin-form {
     background: rgba(255, 255, 255, 0.7);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    padding: 1.5rem 2rem;
+    padding: 1.2rem 1.5rem;
     border-radius: 1px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    width: 500px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     text-align: center;
 }
 
@@ -41,20 +40,25 @@ body {
     color: #222;
     font-weight: bold;
 }
-
-.login-label {
+.name-container, .phone-email-container, .dob-gender-container {
+    display: flex;
+    justify-content: space-between;
+}
+.name{
+    width: 48%;
+}
+.signin-label {
     display: block;
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 700;
     text-align: center;
-    margin: 5px 0 2px;
+    margin: 3px 2px;
     color: #333;
-
 }
 
-.login-input {
+.signin-input {
     width: 100%;
-    padding: 8px;
+    padding: 5px;
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 6px;
@@ -63,7 +67,7 @@ body {
     background: #f9f9f9;
 }
 
-.login-input:focus {
+.signin-input:focus {
     border-color: #198754;
     outline: none;
     background: white;
@@ -72,13 +76,11 @@ body {
 .error-message {
     color: red;
     font-size: 10px;
-    margin-top: 5px;
-    display: block;
     text-align: left;
-    height: 10px;
+    height: 4px;
 }
 
-.login-button {
+.signin-button {
     width: 100%;
     padding: 8px;
     background: #198754;
@@ -90,28 +92,28 @@ body {
     cursor: pointer;
     transition: background 0.3s ease-in-out;
     font-weight: bold;
+    margin-bottom: 10px;
 }
 
-.login-button:hover {
+.signin-button:hover {
     background: #01763f;
 }
 
 .extra-links {
     display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
+    justify-content: end;
+    margin-top: 13px;
 }
 
 .link-button {
     background: none;
     border: none;
     color: #198754;
-    font-size: 14px;
+    font-size: 13px;
     cursor: pointer;
     text-decoration: underline;
     transition: color 0.3s ease-in-out;
     font-weight: bold;
-    margin-right: 10px;
 }
 
 .link-button:hover {
